Fix invisible visited buttons

--- a/src/css/main.scss
+++ b/src/css/main.scss
@@ -61,7 +61,7 @@ h2 {
 			color: $dark-gray;
 		}
 		&:visited {
-			color: $dark-gray;
+			color: $light-gray;
 		}
 	}
 }
